apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-laravel
  namespace: laravelTest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-laravel
  template:
    metadata:
      labels:
        app: k8s-laravel
    spec:
      containers:
        - name: k8s-laravel
          image: 158.247.192.124:30002/laraveltest/k8s-laravel:latest
          ports:
            - containerPort: 9000
