apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-laravel
  namespace: laraveltest
spec:
  selector:
    app: k8s-laravel
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
